# StudentManageSystem

./: CMakeLists.txt  Makefile  ReadMe.md  main.c
include/: Function.h
src/: CMakeLists.txt  function.c
