CMAKE_MINIMUM_REQUIRED(VERSION 3.24)

PROJECT (StudentManageSystem)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/out")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib")
set(CMAKE_LINRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib")

#src加入工程
ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}/src")

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR} MAIN_LIST)

ADD_EXECUTABLE(sms ${MAIN_LIST} ${SRC_LIST})

TARGET_LINK_LIBRARIES(sms SRC)
